--- a/ldawosqcxufvwtahuvgasopptltttnplzmcmtoxrudilejhyiksciyznkrnrpuswbniygoijdkvqgofraixysoynpseqtwkduwud.html
+++ b/ldawosqcxufvwtahuvgasopptltttnplzmcmtoxrudilejhyiksciyznkrnrpuswbniygoijdkvqgofraixysoynpseqtwkduwud.html
@@ -3,7 +3,6 @@
 <html dir="rtl">
 <head>
   <meta charset="utf-8">
-  ::IM_UNDER_ATTACK_BOX::
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
   <title>لطفا منتظر بمانید..</title>
@@ -14,6 +13,7 @@
   <div class="imgdiv">
     <img alt="bitbarg" class="img-logo" id="hplogo" src="https://raw.githubusercontent.com/BitBarg/coinref/master/logogogogo.png" srcset="https://raw.githubusercontent.com/BitBarg/coinref/master/logogogogo.png 1x, https://raw.githubusercontent.com/BitBarg/coinref/master/logogogogo.png 2x" width="210" data-atf="3">
     <div class="HyujD3">لطفا منتظر بمانید</div>
+    <div class="Ghuy5D">::IM_UNDER_ATTACK_BOX::</div>
   </div>
 </div>
 </body>
