--- a/rbqwnytswhixxugmyvylwyyywwaidtczphtifdyluouwxeeqhankvyvqbluxjzlmmujiylgjjmjilvikypddjmowomtehjpgmepw.html
+++ b/rbqwnytswhixxugmyvylwyyywwaidtczphtifdyluouwxeeqhankvyvqbluxjzlmmujiylgjjmjilvikypddjmowomtehjpgmepw.html
@@ -10,7 +10,7 @@
 <body>
 <div class="main">
   <div class="imgdiv">
-    <img alt="bitbarg" class="img-logo" id="hplogo" src="https://raw.githubusercontent.com/BitBarg/coinref/master/logogogogo.png" srcset="https://raw.githubusercontent.com/BitBarg/coinref/master/logogogogo.png 1x, https://raw.githubusercontent.com/BitBarg/coinref/master/logogogogo.png 2x" width="210" data-atf="3">
+    <img alt="bitbarg" class="img-logo" id="hplogo" src="Bitbarg.svg" srcset="Bitbarg.svg 1x, Bitbarg.svg 2x" width="210" data-atf="3">
     <div class="HyujD3">لطفا VPN خود را خاموش کنید و تنها با IP ایران وارد شوید.</div>
   </div>
 </div>
