--- a/rbqwnytswhixxugmyvylwyyywwaidtczphtifdyluouwxeeqhankvyvqbluxjzlmmujiylgjjmjilvikypddjmowomtehjpgmepw.html
+++ b/rbqwnytswhixxugmyvylwyyywwaidtczphtifdyluouwxeeqhankvyvqbluxjzlmmujiylgjjmjilvikypddjmowomtehjpgmepw.html
@@ -13,6 +13,9 @@
     <img alt="bitbarg" class="img-logo" id="hplogo" src="Bitbarg.svg" srcset="Bitbarg.svg 1x, Bitbarg.svg 2x" width="210" data-atf="3">
     <div class="HyujD3">لطفا VPN خود را خاموش کنید و تنها با IP ایران وارد شوید.</div>
   </div>
+  <div class="Ghuy5D">
+  	::CLOUDFLARE_ERROR_1000S_BOX::
+  </div>
 </div>
 </body>
 </html>
