--- a/rbqwnytswhixxugmyvylwyyywwaidtczphtifdyluouwxeeqhankvyvqbluxjzlmmujiylgjjmjilvikypddjmowomtehjpgmepw.html
+++ b/rbqwnytswhixxugmyvylwyyywwaidtczphtifdyluouwxeeqhankvyvqbluxjzlmmujiylgjjmjilvikypddjmowomtehjpgmepw.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
   <title>لطفا منتظر بمانید..</title>
-  <style type="text/css">.Ghuy5D{ opacity: 0; } .main{ width: 300px; padding: 10px; } body{ width: 300px; margin: 0 auto; } .imgdiv{ text-align: center; } .HyujD3{ font-family: iransans;font-size: 13px;margin-top: 10px; } @font-face { font-family: "iransans"; src: url("/fonts/iransans-lite.woff") format("woff2"); }</style>
+  <style type="text/css">.Ghuy5D{ opacity: 0; } .main{ width: 300px; padding: 10px; } body{ width: 300px; margin: 0 auto; } .imgdiv{ text-align: center; } .HyujD3{ color:#afafaf; font-family: iransans;font-size: 13px;margin-top: 10px; } @font-face { font-family: "iransans"; src: url("/fonts/iransans-lite.woff") format("woff2"); }</style>
 </head>
 <body>
 <div class="main">
