--- a/indexxx.html
+++ b/indexxx.html
@@ -15,7 +15,25 @@
   </div>
   <div class="Ghuy5D">
   	::CLOUDFLARE_ERROR_1000S_BOX::
+  </div><!doctype html>
+<html dir="rtl">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
+  <title>لطفا منتظر بمانید..</title>
+  <style type="text/css">.Ghuy5D{ opacity: 0; } .main{ width: 300px; padding: 10px; } body{ width: 300px; margin: 0 auto; } .imgdiv{ text-align: center; } .HyujD3{ color:#afafaf; font-family: iransans;font-size: 13px;margin-top: 10px; } @font-face { font-family: "iransans"; src: url("/fonts/iransans-lite.woff") format("woff2"); }</style>
+</head>
+<body>
+<div class="main">
+  <div class="imgdiv">
+    <img alt="bitbarg" class="img-logo" id="hplogo" src="Bitbarg.svg" srcset="Bitbarg.svg 1x, Bitbarg.svg 2x" width="210" data-atf="3">
+    <div class="HyujD3">لطفا VPN خود را خاموش کنید و تنها با IP ایران وارد شوید.</div>
   </div>
+</div>
+</body>
+</html>
+
   <div class="Ghuy5D">
   	::CLOUDFLARE_ERROR_1000S_BOX::
   </div>
